# cli-job-tracker

./: README.md  SPEC.md  pyproject.toml
cli_job_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
jobs/: cli.py  db.py  display.py
tests/: test_cli.py  test_db.py
