[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cli-job-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
jobs = "jobs.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
